// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInput> Global render should render default 1`] = `
<Component>
  <div
    className="root"
  >
    <InlineTextWrapper
      inlineCss="default"
    >
      <input
        className="input"
        type="text"
      />
    </InlineTextWrapper>
  </div>
</Component>
`;

exports[`<TextInput> Global render should render disabled 1`] = `
<Component
  disabled={true}
>
  <div
    className="root"
  >
    <InlineTextWrapper
      inlineCss="default"
    >
      <input
        className="input"
        disabled={true}
        type="text"
      />
    </InlineTextWrapper>
  </div>
</Component>
`;

exports[`<TextInput> Global render should render error 1`] = `
<Component
  feedbackType="error"
>
  <div
    className="root error"
  >
    <InlineTextWrapper
      inlineCss="error"
    >
      <input
        className="input error"
        type="text"
      />
    </InlineTextWrapper>
  </div>
</Component>
`;

exports[`<TextInput> Global render should render placeholder 1`] = `
<Component
  placeholder="placeholder"
>
  <div
    className="root"
  >
    <InlineTextWrapper
      inlineCss="default"
    >
      <input
        className="input"
        placeholder="placeholder"
        type="text"
      />
    </InlineTextWrapper>
  </div>
</Component>
`;

exports[`<TextInput> Global render should render warning 1`] = `
<Component
  feedbackType="warning"
>
  <div
    className="root warning"
  >
    <InlineTextWrapper
      inlineCss="warning"
    >
      <input
        className="input warning"
        type="text"
      />
    </InlineTextWrapper>
  </div>
</Component>
`;

exports[`<TextInput> Global render should render warning and show feedback text 1`] = `
<Component
  feedbackText="warning"
  feedbackType="warning"
>
  <div
    className="root warning"
  >
    <InlineTextWrapper
      inlineCss="warning"
    >
      <input
        className="input warning"
        type="text"
      />
    </InlineTextWrapper>
    <span
      className="feedback warning"
    >
      warning
    </span>
  </div>
</Component>
`;

exports[`<TextInput> Global render should render with fluid class 1`] = `
<Component
  fullWidth={true}
>
  <div
    className="root fullWidth"
  >
    <InlineTextWrapper
      inlineCss="default"
    >
      <input
        className="input fullWidth"
        type="text"
      />
    </InlineTextWrapper>
  </div>
</Component>
`;
